# fdm

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: cli.rs  main.rs
src/commands/: command.rs  install.rs  mod.rs  releases.rs
src/console/: macros.rs
src/extensions/: match_to_int.rs  mod.rs
src/models/: architecture.rs  channel.rs  mod.rs  platform.rs  supported_arch.rs  supported_os.rs  version.rs
src/services/: install.rs  mod.rs  releases.rs
src/utils/console/: mod.rs  progress.rs
