[package]
name = "fdm"
version = "0.1.0"
authors = ["blendthink <admin@blendthink.dev>"]
edition = "2021"
rust-version = "1.63.0"
description = "Fast Dart Manager: A fast and simple cli to manage Dart SDK versions."
readme = "README.md"
homepage = "https://github.com/blenthink/dvm"
repository = "https://github.com/blenthink/dvm"
license-file = "LICENSE"
keywords = ["cli", "tool"]
categories = ["command-line-interface", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.21", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.21.1", features = ["full"] }

[build-dependencies]
clap_complete = "3.2.5"
