[package]
name = "fdm"
version = "0.1.0"
authors = ["blendthink <admin@blendthink.dev>"]
edition = "2021"
rust-version = "1.63.0"
description = "Fast Dart Manager: A fast and simple cli to manage Dart SDK versions."
readme = "README.md"
homepage = "https://github.com/blenthink/dvm"
repository = "https://github.com/blenthink/dvm"
license-file = "LICENSE"
keywords = ["cli", "tool"]
categories = ["command-line-interface", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.21", features = ["derive"] }
colored = "2.0.0"
futures-util = "0.3.24"
indicatif = "0.17.1"
regex = "1.6.0"
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
serde = { version = "1.0.123", features = ["derive"] }
tempfile = "3.3.0"
tokio = { version = "1.21.1", features = ["full"] }
zip = "0.6.2"

[build-dependencies]
clap_complete = "3.2.5"
